@@ -1708,275 +1708,275 @@ ManType * ManDefs = mt;
 //
 MonType md[] = {
 	// attackLevel, defense array
-	// numAttacks, hits,
+	// numAttacks, hits, regen,
 	// tactics, stealth, obs
 	// special, specialLevel,
 	// silver spoiltype, hostile, number, name
 
 	{0,{0,0,0,0,0,0},
-	 0,0,
+	 0,0,0,
 	 0,0,0,
 	 -1,0,
 	 0,-1,0,0,"None"}, /* none */
 	{3,{3,0,0,0,2,0},
-	 2,2,
+	 2,2,0,
 	 3,2,2,
 	 -1,0,
 	 100,-1,10,3,"Pride of Lions"},
 	{2,{2,0,0,0,3,0},
-	 1,1,
+	 1,1,0,
 	 0,0,0,
 	 -1,0,
 	 40,-1,10,10,"Wolf Pack"},
 	{2,{2,0,0,0,0,0},
-	 6,6,
+	 6,6,0,
 	 0,0,2,
 	 -1,0,
 	 250,-1,10,3,"Grizzly Bears"},
 	{3,{3,3,3,3,0,0},
-	 1,1,
+	 1,1,0,
 	 1,1,1,
 	 -1,0,
 	 50,-1,10,6,"Crocodiles"},
 	{3,{3,3,3,3,2,0},
-	 1,1,
+	 1,1,0,
 	 2,2,0,
 	 -1,0,
 	 50,-1,10,5,"Anacondas"},
 	{2,{2,2,2,2,2,0},
-	 2,2,
+	 2,2,0,
 	 2,3,0,
 	 -1,0,
 	 80,-1,10,8,"Giant Scorpions"},
 	{2,{2,2,0,2,0,0},
-	 6,6,
+	 6,6,0,
 	 0,0,2,
 	 -1,0,
 	 250,-1,10,3,"Polar Bears"},
 	{1,{1,1,1,1,1,0},
-	 1,1,
+	 1,1,0,
 	 0,2,0,
 	 -1,0,
 	 20,-1,10,30,"Pack of Rats"},
 	{4,{4,2,0,2,2,0},
-	 2,2,
+	 2,2,0,
 	 0,2,2,
 	 -1,0,
 	 200,-1,10,4,"Giant Spiders"},
 	{3,{3,3,0,3,1,0},
-	 5,5,
+	 5,5,0,
 	 0,0,0,
 	 -1,0,
 	 400,-1,25,3,"Giant Lizards"},
 	{2,{2,3,3,3,0,0},
-	 10,10,
+	 10,10,0,
 	 2,3,1,
 	 -1,0,
 	 500,IT_ADVANCED,25,7,"Living Trees"},
 	{4,{4,3,0,3,4,0},
-	 15,15,
+	 15,15,0,
 	 4,2,4,
 	 -1,0,
 	 1500,IT_ADVANCED,25,2,"Giant Birds"},
 	{4,{4,3,0,3,0,0},
-	 20,20,
+	 20,20,0,
 	 3,1,3,
 	 -1,0,
 	 2000,IT_ADVANCED,25,2,"Swamp Creatures"},
 	{4,{4,3,0,3,1,0},
-	 25,25,
+	 25,25,0,
 	 0,2,2,
 	 -1,0,
 	 2500,IT_ADVANCED,25,2,"Great Apes"},
 	{4,{4,4,4,4,3,0},
-	 50,50,
+	 50,50,0,
 	 0,0,4,
 	 -1,0,
 	 5000,IT_ADVANCED,25,1,"Sphinx"},
 	{3,{3,3,3,3,3,0},
-	 6,6,
+	 6,6,0,
 	 2,4,1,
 	 -1,0,
 	 500,IT_ADVANCED,25,8,"Ice Wurms"},
 	{6,{6,6,6,6,5,0},
-	 50,50,
+	 50,50,0,
 	 4,0,3,
 	 SPECIAL_FIREBREATH,6,
 	 10000,IT_MAGIC,50,1,"Dragon"},
 	{4,{4,0,0,0,3,0},
-	 2,2,
+	 2,2,0,
 	 0,1,1,
 	 -1,0,
 	 150,IT_NORMAL,10,8,"Tribe of Centaurs"},
 	{2,{2,0,0,0,0,0},
-	 1,1,
+	 1,1,0,
 	 0,1,0,
 	 -1,0,
 	 40,IT_NORMAL,10,20,"Kobold Pack"},
 	{3,{3,2,0,2,0,0},
-	 10,10,
+	 10,10,0,
 	 0,0,0,
 	 -1,0,
 	 600,IT_NORMAL,10,2,"Family of Ogres"},
 	{3,{3,3,0,3,0,0},
-	 1,1,
+	 1,1,0,
 	 0,0,1,
 	 -1,0,
 	 50,IT_NORMAL,10,10,"Lizard Men"},
 	{3,{3,0,0,0,0,0},
-	 1,1,
+	 1,1,0,
 	 0,2,0,
 	 -1,0,
 	 50,IT_NORMAL,10,10,"Clan of Wild Men"},
 	{3,{3,3,0,3,2,0},
-	 1,1,
+	 1,1,0,
 	 1,2,1,
 	 -1,0,
 	 50,IT_NORMAL,10,10,"Sandlings"},
 	{4,{4,3,0,3,3,0},
-	 2,2,
+	 2,2,0,
 	 0,3,1,
 	 -1,0,
 	 150,IT_NORMAL,10,5,"Yeti"},
 	{2,{2,0,0,0,0,0},
-	 1,1,
+	 1,1,0,
 	 0,0,0,
 	 -1,0,
 	 40,IT_NORMAL,10,40,"Goblin Horde"},
 	{3,{3,3,0,3,0,0},
-	 4,4,
+	 4,4,0,
 	 1,0,2,
 	 -1,0,
 	 250,IT_NORMAL,10,8,"Troll Pack"},
 	{2,{2,2,0,2,0,0},
-	 32,32,
+	 32,32,0,
 	 2,0,0,
 	 -1,0,
 	 1200,IT_NORMAL,10,2,"Ettins"},
 	{2,{2,5,5,3,0,0},
-	 1,1,
+	 1,1,0,
 	 0,0,0,
 	 -1,0,
 	 50,IT_NORMAL,10,100,"Skeletons"},
 	{3,{3,2,3,2,0,0},
-	 6,6,
+	 6,6,0,
 	 0,0,0,
 	 -1,0,
 	 400,IT_ADVANCED,25,10,"Undead"},
 	{4,{4,4,4,4,0,0},
-	 40,40,
+	 40,40,0,
 	 3,0,3,
 	 SPECIAL_CAUSEFEAR,4,
 	 4000,IT_MAGIC,50,1,"Lich"},
 	{3,{3,3,3,3,0,0},
-	 1,1,
+	 1,1,0,
 	 0,3,0,
 	 -1,0,
 	 50,IT_NORMAL,10,50,"Imp"},
 	{4,{4,4,4,4,3,0},
-	 10,10,
+	 10,10,0,
 	 0,0,0,
 	 -1,0,
 	 1000,IT_ADVANCED,25,10,"Demon"},
 	{6,{6,6,6,6,5,0},
-	 200,200,
+	 200,200,0,
 	 5,5,5,
 	 SPECIAL_HELLFIRE,6,
 	 50000,IT_MAGIC,100,1,"Balrog"},
 	{2,{2,0,3,2,5,0},
-	 1,1,
+	 1,1,0,
 	 2,3,3,
 	 -1,0,
 	 20,-1,10,1,"Eagle"},
 	{3,{3,0,0,0,0,0},
-	 1,1,
+	 1,1,0,
 	 1,1,1,
 	 -1,0,
 	 400,IT_NORMAL,50,20,"Pirates"},
 	{5,{5,5,5,5,3,0},
-	 50,50,
+	 50,50,0,
 	 1,1,2,
 	 SPECIAL_CAUSEFEAR,5,
 	 1000,IT_MAGIC,50,1,"Kraken"},
 	{2,{2,0,0,2,0,0},
-	 1,1,
+	 1,1,0,
 	 2,2,3,
 	 -1,0,
 	 1000,IT_ADVANCED,10,100,"Merfolk"},
 	{2,{2,3,3,3,2,0},
-	 10,10,
+	 10,10,0,
 	 2,3,1,
 	 -1,0,
 	 500,IT_ADVANCED,25,7,"Living Water"},
 	{-5,{-5,0,0,0,-5,0},
 	 0,0,0,
-	 5,0,
+	 0,5,0,
 	 -1,0,
 	 0,-1,0,0,"Illusion"},
 	// Ceran new monsters
 	{2,{2,2,0,0,2,0},
-	 2,2,
+	 2,2,0,
 	 1,2,0,
 	 -1,0,
 	 20,-1,20,30,"Rad Rats"},
 	{5,{5,5,10,3,5,0},
-	 50,50,
+	 50,50,0,
 	 6,3,2,
 	 SPECIAL_FIREBALL,5,
 	 2000,IT_MAGIC,100,2,"Noogle"},
 	{3,{3,3,3,3,0,0},
-	 3,3,
+	 3,3,0,
 	 1,2,1,
 	 -1,0,
 	 100,IT_NORMAL,10,10,"Mutants"},
 	// Tzargs new monsters
 	{3,{3,3,3,3,0,0},
-	 1,1,1,
-	 3,2,
+	 1,1,0,
+	 1,3,2,
 	 -1,0,
 	 70,IT_NORMAL,50,100,"Drow Warriors"},
 	{2,{5,3,0,0,0,0},
-	 30,60,
+	 30,60,0,
 	 1,0,1,
 	 SPECIAL_FIREBREATH,3,
 	 7500,IT_MAGIC,50,1,"Hydra"},
 	{6,{6,6,6,6,0,0},
-	 50,50,
+	 50,50,0,
 	 4,0,4,
 	 SPECIAL_SUMMON_STORM,6,
 	 10000,IT_MAGIC,50,1,"Storm Giant"},
 	{5,{5,5,5,5,0,0},
-	 30,50,
+	 30,50,0,
 	 4,0,4,
 	 SPECIAL_LSTRIKE,5,
 	 15000,IT_MAGIC,50,1,"Cloud Giant"},
 	{0,{0,5,5,5,0,0},
-	 1,20,
+	 1,20,0,
 	 5,0,5,
 	 SPECIAL_MINDBLAST,5,
 	 10000,IT_MAGIC,50,1,"Illyrthid"},
 	{1,{1,0,0,0,0,0},
-	 1,1,
+	 1,1,0,
 	 3,0,3,
 	 SPECIAL_FIREBALL,3,
 	 200,IT_ADVANCED,50,5,"Evil Sorcerers"},
 	{1,{1,0,0,0,0,0},
-	 1,1,
+	 1,1,0,
 	 3,0,3,
 	 SPECIAL_LSTRIKE,3,
 	 200,IT_ADVANCED,50,2,"Evil Magicians"},
 	{1,{1,0,0,0,0,0},
-	 1,1,
+	 1,1,0,
 	 5,0,3,
 	 SPECIAL_BLACK_WIND,3,
 	 1000,IT_MAGIC,50,1,"Dark Mage"},
 	{3,{3,0,0,0,0,0},
-	 1,1,
+	 1,1,0,
 	 0,0,0,
 	 -1,0,
 	 50,IT_NORMAL,50,20,"Evil Warriors"},
 	{4,{4,4,4,4,3,0},
-	 50,50,
+	 50,50,0,
 	 2,0,3,
 	 SPECIAL_ICEBREATH,4,
 	 8000,IT_MAGIC,50,1,"Ice Dragon"},
